--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -221,8 +221,8 @@ label + .css-1eed5fa-MuiInputBase-root-MuiInput-root {
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
-  max-width: 22rem;
-  width: 100%;
+  width: 22rem;
+
   z-index: 2;
   overflow: hidden;
 
