--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -365,9 +365,40 @@ label + .css-1eed5fa-MuiInputBase-root-MuiInput-root {
 
 .cbox {
   background-color: transparent;
-  margin-bottom: 3rem;
 }
 
 .cno {
   color: #000 !important;
+}
+
+.flip-clock div div {
+  margin-right: 0px !important;
+  box-shadow: none !important;
+  /* background-color: #000; */
+  width: 35px !important;
+}
+
+.flip-clock {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.flip-clock ._2aOn7 {
+  margin-right: 0px !important;
+  box-shadow: none !important;
+  background-color: #000;
+  width: 100% !important;
+  transform: translate(-50%, 100%) !important;
+  padding: 10px 0 !important;
+  font-size: 1rem !important;
+}
+
+.flip-clock div div div {
+  background: #ccff00 !important;
+  color: #000 !important;
+  border-radius: 0% !important;
+  font-size: 3rem;
+}
+.flip-clock {
+  justify-content: center !important;
 }
