--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -342,7 +342,7 @@ label + .css-1eed5fa-MuiInputBase-root-MuiInput-root {
 .cup {
   /* background: #12161c; */
   width: 5rem;
-  height: 5rem;
+  /* height: 5rem; */
   background: #ccff00 !important;
 }
 
