--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -409,3 +409,14 @@ label + .MuiInputBase-root,
 .flip-clock {
   justify-content: center !important;
 }
+
+@media (min-width: 640px) {
+  .gpg {
+    box-shadow: 0px 0px 10px 0px #0000001a;
+    background: rgba(255, 255, 255, 1.15);
+    border: 1px solid #0000001a;
+    color: rgba(0, 0, 0, 0.18);
+    filter: drop-shadow(40px 40px 76px);
+    mix-blend-mode: normal;
+  }
+}
